<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".Addhabit">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_habit_name"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/SelectDate_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/SelectTime_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/SaveHabit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_habit"

        android:layout_marginTop="16dp" />
</LinearLayout>
